--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -1,29 +1,23 @@
 // Your custom styles
-.sidebar-fixed {
-  height: 100vh;
-  width: 270px;
-  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-  z-index: 1050;
-  background-color: #fff;
-  padding: 1.5rem;
-  padding-top: 0; }
-  .sidebar-fixed .list-group .active {
-    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
-    -webkit-border-radius: 5px;
-    border-radius: 5px; }
-  .sidebar-fixed .logo-wrapper {
-    padding: 2.5rem; }
-    .sidebar-fixed .logo-wrapper img {
-      max-height: 50px; }
 
-@media (min-width: 1200px) {
-  .navbar,
-  .page-footer,
-  main {
-    padding-left: 270px; } }
+/* Required height of parents of the Full Page Intro and Intro itself */
+html,
+body,
+.view {
+  height: 100%; }
 
-@media (max-width: 1199.98px) {
-  .sidebar-fixed {
-    display: none; } }
+/* Navbar animation */
+.navbar {
+  background-color: rgba(0, 0, 0, 0.2); }
+
+.top-nav-collapse {
+  background-color: #1C2331; }
+
+/* Adding color to the Navbar on mobile */
+@media only screen and (max-width: 768px) {
+  .navbar {
+    background-color: #1C2331; } }
+
+/* Footer color for sake of consistency with Navbar */
+.page-footer {
+  background-color: #1C2331; }
